added quantumcapacitance doc

--- a/genindex.html
+++ b/genindex.html
@@ -147,6 +147,10 @@
 
       </dl></dd>
       
+  <dt><a href="electrostatics.html#quantumcapacitance.electrostatics.Element.charge_fermi_energy_dependence">charge_fermi_energy_dependence (quantumcapacitance.electrostatics.Element attribute)</a>
+  </dt>
+
+      
   <dt><a href="electrostatics.html#quantumcapacitance.electrostatics.Container.connect">connect() (quantumcapacitance.electrostatics.Container method)</a>
   </dt>
 
