added fermi energy functions in wannier90 module

--- a/electrostatics.html
+++ b/electrostatics.html
@@ -150,6 +150,7 @@ right - the coordinate system is turned 90 degrees clockwise against the
 </div>
 <p>The output:</p>
 <img alt="images/electrostatic_example.png" src="images/electrostatic_example.png" />
+<p>Wieso geht das Bild manchmal nicht??</p>
 <p>That&#8217;s how it&#8217;s done!</p>
 </div>
 <div class="section" id="how-to-set-boundary-conditions-and-other-element-properties">
