--- a/modules/quantumcapacitance/utilities.html
+++ b/modules/quantumcapacitance/utilities.html
@@ -216,8 +216,8 @@
 <span class="sd">        Return the dimension of the interpolation function.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         
-        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">__dim</span></div></div>
-</pre></div>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">__dim</span>
+</pre></div></div></div>
 
           </div>
         </div>
