--- a/electrostatics.html
+++ b/electrostatics.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="static/doctools.js"></script>
     <link rel="top" title="EnvTB 1 documentation" href="index.html" />
     <link rel="next" title="Quantum capacitance" href="quantumcapacitance.html" />
-    <link rel="prev" title="Welcome to EnvTB’s documentation!" href="index.html" /> 
+    <link rel="prev" title="Installation" href="installation.html" /> 
   </head>
   <body>
     <div class="related">
@@ -43,7 +43,7 @@
           <a href="quantumcapacitance.html" title="Quantum capacitance"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="index.html" title="Welcome to EnvTB’s documentation!"
+          <a href="installation.html" title="Installation"
              accesskey="P">previous</a> |</li>
         <li><a href="index.html">EnvTB 1 documentation</a> &raquo;</li> 
       </ul>
@@ -739,8 +739,8 @@ The index is a number running from top to bottom, from left to right.</p>
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="index.html"
-                        title="previous chapter">Welcome to EnvTB&#8217;s documentation!</a></p>
+  <p class="topless"><a href="installation.html"
+                        title="previous chapter">Installation</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="quantumcapacitance.html"
                         title="next chapter">Quantum capacitance</a></p>
@@ -779,7 +779,7 @@ The index is a number running from top to bottom, from left to right.</p>
           <a href="quantumcapacitance.html" title="Quantum capacitance"
              >next</a> |</li>
         <li class="right" >
-          <a href="index.html" title="Welcome to EnvTB’s documentation!"
+          <a href="installation.html" title="Installation"
              >previous</a> |</li>
         <li><a href="index.html">EnvTB 1 documentation</a> &raquo;</li> 
       </ul>
