--- a/installation.html
+++ b/installation.html
@@ -37,9 +37,6 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="py-modindex.html" title="Python Module Index"
-             >modules</a> |</li>
-        <li class="right" >
           <a href="electrostatics.html" title="Electrostatics"
              accesskey="N">next</a> |</li>
         <li class="right" >
@@ -79,7 +76,7 @@
 <p><strong>Simple installation</strong></p>
 <p>If you are using Ubuntu or Debian (or an other Debian-based distribution),
 run on the command line:</p>
-<div class="highlight-python"><pre>sudo apt-get install libblas-dev liblapack-dev python python-numpy python-scipy python-sympy python-matplotlib</pre>
+<div class="highlight-python"><pre>sudo apt-get install libblas-dev liblapack-dev python python-numpy python-scipy python-sympy python-matplotlib python-setuptools</pre>
 </div>
 <p>For the optional packages, run:</p>
 <div class="highlight-python"><pre>sudo apt-get install ipython ipython-notebook openmpi-bin openmpi-doc libopenmpi-dev git python-pip
@@ -219,9 +216,6 @@ administrator.</p>
         <li class="right" style="margin-right: 10px">
           <a href="genindex.html" title="General Index"
              >index</a></li>
-        <li class="right" >
-          <a href="py-modindex.html" title="Python Module Index"
-             >modules</a> |</li>
         <li class="right" >
           <a href="electrostatics.html" title="Electrostatics"
              >next</a> |</li>
