--- a/installation.html
+++ b/installation.html
@@ -37,6 +37,9 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
+          <a href="py-modindex.html" title="Python Module Index"
+             >modules</a> |</li>
+        <li class="right" >
           <a href="electrostatics.html" title="Electrostatics"
              accesskey="N">next</a> |</li>
         <li class="right" >
@@ -216,6 +219,9 @@ administrator.</p>
         <li class="right" style="margin-right: 10px">
           <a href="genindex.html" title="General Index"
              >index</a></li>
+        <li class="right" >
+          <a href="py-modindex.html" title="Python Module Index"
+             >modules</a> |</li>
         <li class="right" >
           <a href="electrostatics.html" title="Electrostatics"
              >next</a> |</li>
