--- a/physics.html
+++ b/physics.html
@@ -37,6 +37,9 @@
           <a href="genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
+          <a href="py-modindex.html" title="Python Module Index"
+             >modules</a> |</li>
+        <li class="right" >
           <a href="utilities.html" title="Utility classes and functions"
              accesskey="N">next</a> |</li>
         <li class="right" >
@@ -134,6 +137,9 @@ eV for energy.</li>
         <li class="right" style="margin-right: 10px">
           <a href="genindex.html" title="General Index"
              >index</a></li>
+        <li class="right" >
+          <a href="py-modindex.html" title="Python Module Index"
+             >modules</a> |</li>
         <li class="right" >
           <a href="utilities.html" title="Utility classes and functions"
              >next</a> |</li>
